--- a/_posts/_drafts/2022-07-05-zanzibar.md
+++ b/_posts/_drafts/2022-07-05-zanzibar.md
@@ -14,11 +14,21 @@ In Zanzibar, we were staying in a small hotel a block away from the ocean. We we
 
 In the afternoon, Kat and I were exhausted from our non-stop travel. We had been saying that Zanzibar would be our vacation from our vacation and we were ready to stare at a wall. So that is just what we did. It was everything we needed and more.
 
+![Kat and Tim give peace signs while lying in bed watching TV on their computer](/assets/images/2022-07-05-zanzibar/relax.jpg)
+{% include caption.html text="Relaxing in our room" %}
+
+
 ## A chance encounter
 
 That evening we regrouped with our new friends Edvard and Anet. We headed to the beach and Anet stopped to make a purchase from a local merchant. As we waited in a resort parking lot a tiny kitten approached us. She started meowing and rubbing up against our legs. We asked the guards of the resort if she had a mother and they told us she did not. Not wanting to get emotionally attached we tried to ignore her but she was persistent. Edvard (not wanting to adopt a second cat from a foreign country) picked her up and put her on the grass nearby. But the second he let go of her she ran back to our feet and continued to cry. At this point Anet blew in like the wind with an enthusiastic, "Baby!!!!" she had swooped up the kitten in her arms and was off to our hotel to convince the owner to care for the cat. As quickly as she had shown up she was gone. 
 
+![A small ginger and white kitten by Edvard's feet](/assets/images/2022-07-05-zanzibar/relax.jpg)
+{% include caption.html text= "Paka choosing us as her parents" %}
+
 Not wanting to go to dinner without her we waited for 1 minute. Which quickly turned to 5, 10 then 15 minutes. At this point, we decided to go back to the hotel and check on things. There we found Anet and the kitten. She had managed to convince the hotel owner and manager to care for the kitten until she was well enough to survive on her own. The manager had also built here a small enclosure in the back and placed out a small saucer with milk. 
+
+![cat drinking from a saucer](/assets/images/2022-07-05-zanzibar/milk.jpg)
+{% include caption.html text= "Paka drinking milk the next morning" %}
 
 ## Revenge of the Dust
 
@@ -38,6 +48,9 @@ Once finished, I let go of her. Her cries immediately stopped but she didn't bud
 ## Chicken Noodle Soup
 
 Given my sickness and our need for relaxation, we decided to rest and meet up with our new friends later that evening for a swim, to watch the sunset, and to have some dinner. We relaxed in our room for most of the morning and hung out with the cat. We tried to clean her up a little bit and did a bit of socializing with the cat. At this point, she loved our company, and was learning how to walk, but didn't have the energy to play or groom herself. 
+
+{% include youtube.html link="https://www.youtube.com/embed/S2I-W2WHtAI" %}
+{% include image-gallery.html folder="/assets/images/2022-07-05-zanzibar/cat" %}
 
 For lunch, we went to a nearby spa that was serving western food. I ordered a chicken noodle soup and ginger tea for my throat. The ginger tea was the strongest ginger tea I had ever had. I dumped all of the sugar packets on the table and then it was only barely palatable. Stobernally and "for my health" I drank the entire glass and the glass Katie ordered. I brought a small amount of chicken back to the kitten and she turned her nose up at it preferring the milk and canned tuna we had been feeding her.
 
@@ -102,9 +115,9 @@ At this point things work looking possible we just needed to find a vet. Katie c
 
 ## The crunch
 
-At this point, it is around 4pm on a Friday and our original flight leaves on Monday. Between now and then the vet is only open tomorrow from 9am - 1pm. Still worried that she might have something wrong with her precluding us from keeping her. We made it our mission to get her to the vet.
+At this point, it is around 4 pm on a Friday and our original flight leaves on Monday. Between now and then the vet is only open tomorrow from 9 am - 1 pm. Still worried that she might have something wrong with her precluding us from keeping her. We made it our mission to get her to the vet.
 
-We found a ferry to Dar Es Salaam at 7am, convinced the hotel owner to drive us to said ferry, then convinced him to take us to a pet store to get a carrier. On the way to the store, we stopped at an ATM. Due to the unreliable banking system, most transactions in Tanzania are done in cash. We pulled out a lot of money. Enough to pay for our hotel, the car, cat carrier, any vet expenses, and the ferry. We had to do multiple transactions. Since we were taking so long the armed guard outside checked on us multiple times to see if we were okay.
+We found a ferry to Dar Es Salaam at 7 am, convinced the hotel owner to drive us to said ferry, then convinced him to take us to a pet store to get a carrier. On the way to the store, we stopped at an ATM. Due to the unreliable banking system, most transactions in Tanzania are done in cash. We pulled out a lot of money. Enough to pay for our hotel, the car, cat carrier, any vet expenses, and the ferry. We had to do multiple transactions. Since we were taking so long the armed guard outside checked on us multiple times to see if we were okay.
 
 Now late in the evening we got back to our hotel carrier in hand and plan cemented. I went out to grab us food and a towel to make the carrier more comfortable for Paka. Meanwhile, Katie packed up our things. Stressed and tired we set an alarm for 4:30 and went to sleep. 
 
