siem reap photos

--- a/_posts/_drafts/2022-08-19-siem-reap.md
+++ b/_posts/_drafts/2022-08-19-siem-reap.md
@@ -41,3 +41,5 @@ Half of their menu was vegan and we tried 3 of the dishes from the vegan menu. T
 
 For this trip, I have decided to forgo any self-imposed dietary restrictions. The main one is how much meat I consume. At home, we tend to eat meat 1-2 a week. When traveling in Italy and Tanzania we were eating meat 2-3 times a day! I am grateful to have access to such fresh, delicious vegetable-focused meals.
 
+
+{% include image-gallery.html folder="/assets/images/2022-08-19-siem-reap" %}
