--- a/_posts/2022-07-05-zanzibar.md
+++ b/_posts/2022-07-05-zanzibar.md
@@ -49,7 +49,7 @@ Once finished, I let go of her. Her cries immediately stopped but she didn't bud
 
 Given my sickness and our need for relaxation, we decided to rest and meet up with our new friends later that evening for a swim, to watch the sunset, and to have some dinner. We relaxed in our room for most of the morning and hung out with the cat. We tried to clean her up a little bit and did a bit of socializing with the cat. At this point, she loved our company, and was learning how to walk, but didn't have the energy to play or groom herself. 
 
-{% include youtube.html link="https://www.youtube.com/embed/S2I-W2WHtAI" %}
+{% include youtube.html code="S2I-W2WHtAI" %}
 {% include image-gallery.html folder="/assets/images/2022-07-05-zanzibar/cat" %}
 
 For lunch, we went to a nearby spa that was serving western food. I ordered a chicken noodle soup and ginger tea for my throat. The ginger tea was the strongest ginger tea I had ever had. I dumped all of the sugar packets on the table and then it was only barely palatable. Stobernally and "for my health" I drank the entire glass and the glass Katie ordered. I brought a small amount of chicken back to the kitten and she turned her nose up at it preferring the milk and canned tuna we had been feeding her.
