--- a/_posts/_drafts/2022-08-20-siem-reap.md
+++ b/_posts/_drafts/2022-08-20-siem-reap.md
@@ -81,21 +81,40 @@ For context, I had spent my last 6 months with the CDC advocating for the modern
 
 {% include image-gallery.html folder="/assets/images/2022-08-20-siem-reap/cdc" %}
 
-## Food
-- coconuts
-- lok lak
-- amok
-- passion fruit smmoties
+## The Food
+The food in Siem Reap was amazing! Passion fruit smoothies quickly became an everyday staple. The fruit was incredibly fresh and for only $2 USD they were too good not to add to every meal. They were the perfect refreshing drink to beat the heat. Cold and sweet with a blast of tartness from the seeds. The only problem is our waistlines. Ordering a smoothie with every meal (and in between meals) quickly adds up. We are eating far more than we are used too.
+
+Normally, our meals while traveling look like this:
+1. A light breakfast like a small bowl of cereal and possible some fresh fruit or juice and a black coffee for Tim
+2. For lunch a PB&J and assorted snacks
+3. Go out to eat for dinner or make a meal where we are staying
+
+However, in Siem Reap food was so good, cheap, and fast our meals became:
+1. For breakfast was some combination of pastries and quiche from the [Paris Bakery](https://goo.gl/maps/qt15Cb7rw3spnyNbA) or splitting an order of eggs florentine and french toast from [footprints cafe](https://footprintcafes.org/). And always with fresh fruit, a smoothie and a latte for Tim
+2. Lunch was consistently street food usually Lok Lak, Amok, or fried morning glories with a fresh coconut
+3. Dinner was a full meal with appetizers, entrees and desserts. And always with more smoothies. We found both great french and Cambodian food. Our favorite spots are [JOMNO](https://jomnostreetfood.business.site), [HAVEN](https://havencambodia.com/), and [La Kh'Mère Poulart](https://goo.gl/maps/XsqoXrjPxqGaMjcK6)
+
 {% include image-gallery.html folder="/assets/images/2022-08-20-siem-reap/food" %}
 
+## Cat
+We have talked a lot about how Paka looks different from the cats we are used to in the USA. Describing her proportions or minute facial differences. In Cambodia, cats are referred to as tailless. As their tails are short and end in a nub. A much more obvious difference than the long thin tails of cats in the states. I joked about bringing on back to breed with Paka to start a new breed of house cat. But Alas, we choose not to adopt a cat here. Given that the street cats are well feed and  cared for by the monks and residents.
+{% include image-gallery.html folder="/assets/images/2022-08-20-siem-reap/cat" %}
 
 ## other
 - cheap food, tuk tuks and drinks
 - trash cans, bottle gas stations, LEDs, cloth towels 
 
-## Cat
-{% include image-gallery.html folder="/assets/images/2022-08-20-siem-reap/cat" %}
+
 ## City
+
+Exploring the city was fascinating. It felt new and exciting. With many immaculate gardens, beautiful templates, and lovely people. A few things stuck out to me as particularly interesting.
+
+1. The city had come up with an ingenious way of reusing old tires. Turning them into rubbish bins that are aesthetically pleasing and functional. They seemed to have a trash can on every block.
+2. There seemed to be a much higher adoption rate of LED lighting than in the US. Strips of LEDs lined bridges, walkways and fences. It seems that the high relative cost of electricity has really driven their adoption.
+3. There weren't many formal gas stations with underground storage and pumps as we are used to. However, it seemed that every street vendor was selling gas in old plastic water bottles and glass liquor bottles.
+
+
+ Many of the markets that we found recommended online were full of dozens of vendors selling the same cheaply amde items from China. They were
 {% include image-gallery.html folder="/assets/images/2022-08-20-siem-reap/city" %}
 
 ## Temple
