publish north america

--- a/_posts/_drafts/2022-08-20-siem-reap.md
+++ b/_posts/_drafts/2022-08-20-siem-reap.md
@@ -112,9 +112,11 @@ Exploring the city was fascinating. It felt new and exciting. With many immacula
 1. The city had come up with an ingenious way of reusing old tires. Turning them into rubbish bins that are aesthetically pleasing and functional. They seemed to have a trash can on every block.
 2. There seemed to be a much higher adoption rate of LED lighting than in the US. Strips of LEDs lined bridges, walkways and fences. It seems that the high relative cost of electricity has really driven their adoption.
 3. There weren't many formal gas stations with underground storage and pumps as we are used to. However, it seemed that every street vendor was selling gas in old plastic water bottles and glass liquor bottles.
+4. Every bathroom and reusable cloth towels!
+5.  Many of the markets that we found recommended online were full of dozens of vendors selling the same cheaply made items from China. We had to look around a bit more in order to find more locally-made goods
 
 
- Many of the markets that we found recommended online were full of dozens of vendors selling the same cheaply amde items from China. They were
+
 {% include image-gallery.html folder="/assets/images/2022-08-20-siem-reap/city" %}
 
 ## Temple
