--- a/_posts/_drafts/2022-08-20-siem-reap.md
+++ b/_posts/_drafts/2022-08-20-siem-reap.md
@@ -100,22 +100,16 @@ However, in Siem Reap food was so good, cheap, and fast our meals became:
 We have talked a lot about how Paka looks different from the cats we are used to in the USA. Describing her proportions or minute facial differences. In Cambodia, cats are referred to as tailless. As their tails are short and end in a nub. A much more obvious difference than the long thin tails of cats in the states. I joked about bringing on back to breed with Paka to start a new breed of house cat. But Alas, we choose not to adopt a cat here. Given that the street cats are well feed and  cared for by the monks and residents.
 {% include image-gallery.html folder="/assets/images/2022-08-20-siem-reap/cat" %}
 
-## other
-- cheap food, tuk tuks and drinks
-- trash cans, bottle gas stations, LEDs, cloth towels 
-
-
 ## City
-
 Exploring the city was fascinating. It felt new and exciting. With many immaculate gardens, beautiful templates, and lovely people. A few things stuck out to me as particularly interesting.
 
 1. The city had come up with an ingenious way of reusing old tires. Turning them into rubbish bins that are aesthetically pleasing and functional. They seemed to have a trash can on every block.
 2. There seemed to be a much higher adoption rate of LED lighting than in the US. Strips of LEDs lined bridges, walkways and fences. It seems that the high relative cost of electricity has really driven their adoption.
 3. There weren't many formal gas stations with underground storage and pumps as we are used to. However, it seemed that every street vendor was selling gas in old plastic water bottles and glass liquor bottles.
 4. Every bathroom and reusable cloth towels!
-5.  Many of the markets that we found recommended online were full of dozens of vendors selling the same cheaply made items from China. We had to look around a bit more in order to find more locally-made goods
 
 
+ Many of the markets that we found recommended online were full of dozens of vendors selling the same cheaply made items from China. We had to look around a bit more to find more locally-made goods. Thankfully we found [Made in Cambodia Market](https://www.facebook.com/MadeinCambodiaMarket/), [the Phare Circus shop](https://pharecircus.org/shop) and [SATU](https://shopsatu.com/). Which stocked plenty of goods from local artist. We are nervous about carrying around too much weight with a month in Vietnam next but we can always mail things home. And when you see something you love halfway around the world you have to buy it. #noRegrets
 
 {% include image-gallery.html folder="/assets/images/2022-08-20-siem-reap/city" %}
 
