more drafts and shrink img size

--- a/_posts/_drafts/2022-09-02-hanoi.md
+++ b/_posts/_drafts/2022-09-02-hanoi.md
@@ -2,5 +2,24 @@
 layout: post
 title: "Hanoi & Vietnam's National Day"
 author:
-  - dkljaf;lajg
+  - abc
 ---
+
+
+- walking tour
+  - temple
+  - soft shell turtle
+  - budists hand fruit
+  - latern street
+  - food markets
+  - clothing whole sale
+  - sugar cane juice
+- restraunt down the alley
+- date on the balcony
+- food tour
+- National day
+  - ho chi min plaza
+  - botanical garden
+  - tofu street vendor
+  - chat outside convience store
+  - ban mi 
