--- a/_posts/_drafts/2022-10-27-rotorua.md
+++ b/_posts/_drafts/2022-10-27-rotorua.md
@@ -1,7 +1,11 @@
 ---
 layout: post
-title: "Bali - amed scuba"
+title: "Rotorua"
 author:
   - Timothy Best
   - Katherine Nammacher
 ---
+
+
+- stay on the lake
+ - bannana pancakes
