--- a/_posts/2022-08-20-siem-reap.md
+++ b/_posts/2022-08-20-siem-reap.md
@@ -1,32 +1,35 @@
 ---
 layout: post
 title: "Siem Reap"
+date: '30.10.2022 10:48'
 author:
   - Timothy Best
 ---
 
 ## Kulan Elephant forest
 
-I tend to be skeptical of the ethics of any animals in captivity and especially ones involving large mammals. I also love animals and interacting with them brings me tremendous joy. It fills me with wonder and excitement about the world.
+I tend to be skeptical of the ethics of any animals in captivity and especially ones involving large mammals. I also love interacting with them. It brings me tremendous joy and fills me with wonder about the world.
 
 When researching Siem Reap I had come across [The Kulan Elephant Forest](https://www.kulenforest.asia/). It was a tourist attraction that advertised saving elephants from tourism. Which seemed like a contradiction. Skeptically I added it to the list of "maybe" activities.
 
-On our first day at Angkor Wat, we ended up chatting with a lovely woman who was working at an NGO in the area. We had a wonderful conversation learning that she came here on holiday and ended up living here for years. While in Cambodia on the holiday she learned about a great for folks to help out with a special needs school and took the job. She told us much of what it was like before and after COVID. In pre-COVID times there used to be elephants at the Angkor Wat temple. They would offer rides to tourists no matter the time of day or weather conditions. Sadly, this lead to the death of one of the elephants in 2019. This in combination with the pandemic provided the right opportunity for a wealthy donor to purchase the animals and "retire" them to a sanctuary. After getting the back story and having someone who has lived in the area for a while vouch that the organization seemed ethical. We moved it to our "must-do" list. And I am glad we did.
+On our first day at Angkor Wat, we ended up chatting with a lovely woman who was working at an NGO in the area. We had a wonderful conversation learning that she came here on holiday and ended up living here for several years. While in Cambodia on the holiday, she learned about a grant for folks to help out with a special needs school and took the job. She told us much of what it was like before and after COVID.
+
+In pre-COVID times there used to be elephants at the Angkor Wat temple. They would offer rides to tourists no matter the time of day or weather conditions. Sadly, this lead to the death of one of the elephants in 2019. This in combination with the pandemic provided the right opportunity for a wealthy donor to purchase the animals and "retire" them to a sanctuary. After getting the back story and having someone who has lived in the area for a while vouch that the organization seemed ethical. We moved it to our "must-do" list. And I am glad we did.
 
 The experience was wonderful and it seemed like they were doing their best to care for the animals. We started the day by taking a bus 40km north to the forest where we got to feed the elephants some treats (bananas and sugar cane), went on a short 3km hike and then came back to watch them take a bath and feed them some king grass (A hard to cultivate grass that is one of their favorites). 
 
-I was humbled and intimidated by their presence. They are huge animals! The guides explained to us the dos and don'ts which all seemed like basic respectful behavior. Such as: don't pull on their tails. let the elephant approach you. If they back away from you let them. Don't take away food after offering it to them. 
+I was humbled and intimidated by their presence. They are huge animals! The guides explained to us the dos and don'ts which all seemed like basic respectful behavior. Such as: don't pull on their tails. Or let the elephant approach you not the other way around. Or If they back away from you let them. And Don't take away food after offering it to them. 
 
-At one point another visitor approached me and said I had 'elephant face'. Referring to my ear-to-ear smile. Additionally, the tour guide was super knowledgeable and we learned lots about Asian elephants. including:
+At one point another visitor approached me and said I had 'elephant face'. Referring to my ear-to-ear smile. Additionally, the tour guide was super knowledgeable and we learned a lot about Asian elephants. including:
 
 - They are smaller and browner than their African counterparts
-- While capable of longer lives they often die around 45 years old due to starvation. Their molars wear out and then they can't get enough soft food in the dry season. To combat this the sanctuary makes massive dishes of banana and rice for their older elephants to help them through the dry season
-Elephants are capable of recognizing them selfs in the mirror
-- Fit ones can swim up to 1km
+- While capable of longer lives they often die around 45 years old due to starvation. Their molars wear out and then they can't get enough soft food in the dry season. To combat this the sanctuary makes massive dishes of bananas and rice for their older elephants to help them through the dry season
+- Elephants are capable of recognizing them selfs in the mirror
+- They can swim up to 1km
 - They can hold their breath for over two minutes
-- Are capable of covering 40km in a single hour
-An elephant's gestation period is 21-23 months
-At the sanctuary, they are trying to breed the elephants and have found that if the females are not attracted to the males they will go hide in the woods and the animals won't breed
+- Are capable of running 40km in a single hour
+- An elephant's gestation period is 21-23 months
+- At the sanctuary, they are trying to breed the elephants and have found that if the females are not attracted to the males they will go hide in the woods and the animals won't breed
 
 {% include image-gallery.html folder="/assets/images/2022-08-20-siem-reap/kulan" %}
 
@@ -36,13 +39,13 @@ At the sanctuary, they are trying to breed the elephants and have found that if 
 Apopo was on my must-do in Siem reap list. They are an organization that uses blind rats to sniff out and find landmines! The tour was very educational and also heartbreaking. I struggle to come to terms with how evil landmines are. They are horrific weapons. A few facts that drive how diabolical they are:
 - Many are specifically designed to maim and not kill
 - They cost about 10 to 30 times more to remove than they do to create. A negative externality created by the wealthiest countries and paid for by some of the poorest. Creating physical suffering, delaying development, and dividing communities.
-- The majority of people they kill/injure are Most end up affecting those who 
+- The majority of people they kill/injure are not those involved in the conflict 
 
-The visitor center did a great job of breaking down some of the lasting effects on the communities. On the tour, we then learned about how they are working to remove landmines in Cambodia and worldwide. They are using three main tools for finding the mines, metal detectors, dogs and the African pouch rats. Each has its strengths but the rats stand out as the fastest, safest and most accurate. 
+The visitor center did a great job of breaking down some of the lasting effects on the communities. On the tour, we learned about how they are working to remove landmines in Cambodia and worldwide. They are using three main tools metal detectors, dogs and the African pouch rats for finding the mines. Each has its strengths but the rats stand out as the fastest, safest and most accurate. 
 
-We learned that the rats are bred and trained in Tanzania. An unexpected connection to our previous travels! The rats are incredibly smart and clever. While they can not be domesticated they are trained to sniff out TNT and scratch the ground in the location of the smell. This makes them advantageous to metal detectors as they can ignore scrap metal and find plastic landmines. When compared to the dog they are advantageous as they have yet to have a false positive in the field and are light enough to not set off the mine. 
+We learned that the rats are bred and trained in Tanzania. An unexpected connection to our previous travels! The rats are incredibly smart and clever. While they can not be domesticated they are trained to sniff out TNT and scratch the ground in the location of the smell. This makes them advantageous to metal detectors as they can ignore scrap metal and find plastic landmines. When compared to the dog they are advantageous as they have yet to have a false positive in the field and are light enough to not set off the mines. 
 
-Currently, the ~60 rats have a perfect tract record of finding all mines in the swept area. A fact that is verified by a second rat, a metal detector and then a separate independent check by the Cambodian government. Apopo is doing amazing work and you can follow them on (they have tons of cute videos of rats): 
+Currently, the ~60 rats have a perfect tract record of finding all mines in the swept area. A fact that is verified by a second rat, a metal detector and then a separate independent check by the Cambodian government. Apopo is doing amazing work and you should follow them on their social (they have tons of cute videos of rats): 
 - [apopo.org](https://www.apopo.org/en)
 - [YouTube](https://www.youtube.com/c/apopovideos)
 - [Instagram](https://www.instagram.com/herorats/)
@@ -55,8 +58,9 @@ Currently, the ~60 rats have a perfect tract record of finding all mines in the 
 
 ## Phare Circus
 
-The Phare Circus was a lovely night out. We paired it the same day as the Kulan Elephant Forest and ended up hanging out with two of the couple who were on the Elephant tour. There was a nice shop and a cafeteria with a number of cooks making different dishes. It had been a while since either of us have seen live performance art and the group here was amazing. They combined acrobatics with physical storytelling. The storytelling was so good that it made the screens running the translation unnecessary. After the show, we picked up some gifts at the shop and then experienced our first down pour. Being here during the rainy season we were expecting heavy rains every day but it has been surprisingly sunny and fair
+The Phare Circus was a lovely night out. We paired it the same day as the Kulan Elephant Forest and ended up meeting two of the couples who were on the Elephant tour with us. There was a nice shop and a cafeteria with a number of cooks making different dishes. It had been a while since either of us have seen live performance art and the group here was amazing. They combined acrobatics with physical storytelling. The storytelling was so good that it made the screens running the translation unnecessary. After the show, we picked up some gifts at the shop and then experienced our first downpour. Being here during the rainy season we were expecting heavy rains every day but it has been surprisingly sunny and fair
 
+{% include youtube.html code="BLcKNLJWxcY" %}
 {% include image-gallery.html folder="/assets/images/2022-08-20-siem-reap/circus" %}
 
 
@@ -75,6 +79,7 @@ The entire interaction had me reflecting on what we associate with gender and ha
 
 
 ## Escaping work
+
 One of the many reasons for this trip was to escape from work for a while. We had a particularly stressful work experience during the pandemic and are both feeling quite burnt out. We wanted to spend some time reconnecting with the world, our values, ourselves and each other before reentering the workforce. However, it turns out that even on the other side of the world there are reminders.
 
 For context, I had spent my last 6 months with the CDC advocating for the modernizing of a legacy system using [Strangler Figs](https://martinfowler.com/bliki/StranglerFigApplication.html) as a metaphor. And lo a behold, halfway across the world, what do I run into but many strangler figs and the CDC.
@@ -82,6 +87,7 @@ For context, I had spent my last 6 months with the CDC advocating for the modern
 {% include image-gallery.html folder="/assets/images/2022-08-20-siem-reap/cdc" %}
 
 ## The Food
+
 The food in Siem Reap was amazing! Passion fruit smoothies quickly became an everyday staple. The fruit was incredibly fresh and for only $2 USD they were too good not to add to every meal. They were the perfect refreshing drink to beat the heat. Cold and sweet with a blast of tartness from the seeds. The only problem is our waistlines. Ordering a smoothie with every meal (and in between meals) quickly adds up. We are eating far more than we are used too.
 
 Normally, our meals while traveling look like this:
@@ -114,4 +120,5 @@ Exploring the city was fascinating. It felt new and exciting. With many immacula
 {% include image-gallery.html folder="/assets/images/2022-08-20-siem-reap/city" %}
 
 ## Temple
+And here are some photos of Dr. Speckles exploring [Wat Preah Prom Rath](https://goo.gl/maps/d6dTCDj3afPv695g7)
 {% include image-gallery.html folder="/assets/images/2022-08-20-siem-reap/temples" %}
