draft ofauckland post

--- a/_posts/_drafts/2022-10-12-auckland.md
+++ b/_posts/_drafts/2022-10-12-auckland.md
@@ -3,5 +3,53 @@ layout: post
 title: "Auckland"
 author:
   - Timothy Best
-  - Katherine Nammacher
 ---
+
+New Zealand has been a country we knew we wanted to go to. We had heard the Great walks book up months in advance so Katherine booked us both on 4 great walks before the country was open to tourists. And we figured we would figure out the rest once we got there. Along our travels, we have met many people who have visited New Zealand and they only had wonderful things to see. We are so excited to be in a country where we speak the language and are thankful that during our travels, New Zealand lifted their restriction and we were able to make it here!
+
+## Getting here
+
+The flight from South Korea was much harder than either of us had anticipated. Neither of us slept much on the overnight flight. Once we landed we got to the e-passport scanner and we were both denied and had to queue to see a border agent. Turns out that there is a [foot and mouth disease](https://www.mpi.govt.nz/biosecurity/plans-for-responding-to-serious-disease-outbreaks/foot-and-mouth-disease/about-foot-and-mouth-disease/) outbreak in Bali and we needed additional screening. Thankfully our additional screening was easy enough we had washed the shoes we were wearing and all the shoes we were carrying with us. I had 2 and Katie had 5 (having purchased custom pairs in Hoi An).
+
+After getting through customs and entering the country we sat in the airport and watch one and a half episodes of [The Rings of Power](https://www.amazon.com/Lord-Rings-Power-Season/dp/B09QH98YG1) while waiting to be able to check into our Airbnb.
+
+We then took a nap, got some supplies from the grocery store, and took a walk by the pier to get gelato before passing out for some much-needed rest.
+
+{% include image-gallery.html folder="/assets/images/2022-10-12-auckland/day-1" %}
+
+## Our first day with a full night's sleep
+
+The next morning we woke up and went on a [free walking tour](https://aucklandfreewalkingtours.com/) around Auckland. We started at the ferry building. And soon learned that it looked familiar to us since the city had bought the plans from San Francisco and built a copy of their building. They did this to make Auckland feel like a familiar city to travelers.
+
+We also learned about the [Sky tower](https://en.wikipedia.org/wiki/Sky_Tower_(Auckland)) which you can bungee jump off of. A sport invented in New Zealand. We talked about doing this but ended up passing on the opportunity.
+
+- Woman's suffrage
+- silver fern
+- covid comparison
+- settlers V Crown V natives
+- drunk college kids on the clock
+- tane mahute
+
+Post tour we grabbed lunch at the dumpling place that our guide recommended. Before coming to New Zealand I didn't know or think much about their food. Finding out the strong Asian influences has been fascinating. One on the things I talk about having lived on both the east and west coast of america is how the east coast has mush more european influances on food. and the west coast has mush more asian influances. Given that New Zealand is so much closer than Califorian it makes sense there would be a stronger influance.
+
+{% include image-gallery.html folder="/assets/images/2022-10-12-auckland/city-tour" %}
+
+## Museum
+
+{% include image-gallery.html folder="/assets/images/2022-10-12-auckland/city-museum" %}
+
+## Car
+
+Since we are in New Zealand for 2 months we needed a form of transit. At first Ilooked into the bus system as there seemed to bemany buses between major cities and to popular hikes. However, since COVID many of the routes are no longer run or if they are run. We then looked into renting a car and blown away by the price. As we didn'trealize the pricewasin NZD and not USD. One ofmydear friendsmentioned that we could buyacar for cheap andthensell it. After realizing that the rental cars were in NZD we were torn. Wefelt that if we wereherefor amonth we would rent and car and if we werehere for 3 months we would buy one.But weweren't sure which option made sense for two months.
+
+We decided that we wouldtime box our car hunt while in auckland. Looking forafew days and if we didn;t find anythingthenwe would get a rental. So while we weredoing recovering from jet lag, doing the citytour, andcheckingout the museum we were also looking for a car.Scowering TradeMe, face book, ???, hostel bulitn boards, and local dealers. 
+
+We had two viewings lined up so we got ourseleves a city transit card and a bus to the suberbs. Thefirst car we sawwas great. A 2008Honda Stream with only 51k km onit. Wedecidedsince itdroveandnothing waswrongwithit we would buy it then and thenre. So we walked to the nearbuy malland and went to ever bankin the area.Each bankeither didn't have cash on site or wouldn'tdo withdrawls from forien accounts so we. We thenwent to every ATM maxing outtheire withdrawl limits and thedaily withdraw limits on our debit cars. 
+
+It feltcriminal and nefarious likewe werebreaking someruleordoing something weshouldn'tbe doing. Justa fewhundreads dollarsshort of the argeed apon price we decidedto grab lunch. Whilwwaiting forour foodImsgedthe carowner that we needed our backup debit card thatweleft in auckland. They weregracious enough to take what we had at the moment as a deposit. So we hopped in our almost new car and drove back into the city. We thankfullygotenough before maxing out all our cars so we drovebacktopay.
+
+After our finalpayment they transferedownership to us (yes its all online) andthen we satdown for some tea and a lovely conversation abouttravel, life,rasing a family,andmore. Excited from our new pruchase andthe lvoely conversation. we went off to a near buy foodmarket for dinner and then watched thesun go down on thenearby beach before heading back to immeditly goto sleep.Asweareboth still jet laggedand exaused fromruniing to allthebanksandATMs.
+
+The next day we took it slow. Got somealone time Katherine heading to a hearby park and Iwentfora urban hikearoundthecity. We planed our the next step in our adventurs and picked up a few oddsandends to make organizing our careasier.
+
+{% include image-gallery.html folder="/assets/images/2022-10-12-auckland/car" %}
