edit/add to auckland

--- a/_posts/_drafts/2022-10-12-auckland.md
+++ b/_posts/_drafts/2022-10-12-auckland.md
@@ -23,16 +23,23 @@ The next morning we woke up and went on a [free walking tour](https://aucklandfr
 
 We also learned about the [Sky tower](https://en.wikipedia.org/wiki/Sky_Tower_(Auckland)) which you can bungee jump off of. A sport invented in New Zealand. We talked about doing this but ended up passing on the opportunity.
 
-- Woman's suffrage
-- silver fern
-- covid comparison
-- settlers V Crown V natives
-- drunk college kids on the clock
-- tane mahute
+Our tour guide was super knowledgeable and we got a really good intro into the city's history, the culture and much much more including:
+- New Zealand's Woman's suffrage led by Kate Sheppard. New Zealand became the first nation in the world in which all women had the right to vote in parliamentary elections in 1893.
+- The silver fern is named for the silver-white color under the fronds and its ability to reflect the moonlight.
+- Covid comparison
+- The dynamics between the Settlers, Crown, and Maori
+- Drunk college kids on the clock
+- Tane Mahuta
 
-Post tour we grabbed lunch at the dumpling place that our guide recommended. Before coming to New Zealand I didn't know or think much about their food. Finding out the strong Asian influences has been fascinating. One on the things I talk about having lived on both the east and west coast of america is how the east coast has mush more european influances on food. and the west coast has mush more asian influances. Given that New Zealand is so much closer than Califorian it makes sense there would be a stronger influance.
+Post tour we grabbed lunch at the dumpling place that our guide recommended. Before coming to New Zealand I didn't know or think much about their food. Finding out the strong Asian influences has been fascinating. Having lived on both the east and west coasts of America I have seen how the east coast has more European influences on food and the west coast has more Asian influences. Given that New Zealand is so much closer than California it makes sense there would be a stronger influence from Asia.
 
 {% include image-gallery.html folder="/assets/images/2022-10-12-auckland/city-tour" %}
+
+## Amsterdam
+
+Having been on the road for so long we are starting to miss the comforts that make life feel normal. One way we want to try to bring back a feeling of normalcy was to go to the cinema. After the city tour, we took a break in our airbnb and then headed out to the movies. While in line to buy some popcorn we watch a house sparrow fly from a ceiling rafter into the popped popcorn, pick up a piece and fly back. This happened at least 4 times and brought us so much joy. Mentioning it to the staff and they seemed completely unfazed.
+
+We saw [Amsterdam](https://www.imdb.com/title/tt10304142/) and thoroughly enjoyed it. The experience felt refreshing and normal. However, the superlatives and unique new experiences did follow us there. It being the only IMax theater in New Zealand and my first time at the cinema in a foreign country.
 
 ## Museum
 
@@ -40,16 +47,19 @@ Post tour we grabbed lunch at the dumpling place that our guide recommended. Bef
 
 ## Car
 
-Since we are in New Zealand for 2 months we needed a form of transit. At first Ilooked into the bus system as there seemed to bemany buses between major cities and to popular hikes. However, since COVID many of the routes are no longer run or if they are run. We then looked into renting a car and blown away by the price. As we didn'trealize the pricewasin NZD and not USD. One ofmydear friendsmentioned that we could buyacar for cheap andthensell it. After realizing that the rental cars were in NZD we were torn. Wefelt that if we wereherefor amonth we would rent and car and if we werehere for 3 months we would buy one.But weweren't sure which option made sense for two months.
+Since we are in New Zealand for 2 months we needed a form of transit. At first, I looked into the bus system as there seemed to be many buses between major cities and popular hikes. However, since COVID many of the routes are no longer run or if they are run. We then looked into renting a car and were blown away by the price. As we didn't realize the price was in NZD and not USD. One of my dear friends mentioned that we could buy a car for cheap and then sell it. After realizing that the rental cars were in NZD we were torn. We felt that if we were here for a month we would rent and car and if we were here for 3 months we would buy one. But we weren't sure which option made sense for two months.
 
-We decided that we wouldtime box our car hunt while in auckland. Looking forafew days and if we didn;t find anythingthenwe would get a rental. So while we weredoing recovering from jet lag, doing the citytour, andcheckingout the museum we were also looking for a car.Scowering TradeMe, face book, ???, hostel bulitn boards, and local dealers. 
+We decided that we would time-box our car hunt while in Auckland. Looking for a few days and if we didn't find anything then we would get a rental. So while we were recovering from jet lag, doing the city tour, and checking out the museum we were also looking for a car. Scouring [TradeMe](https://www.trademe.co.nz) (NZ's version of eBay), [AutoTrader, FaceBook marketplace hostel bulletin boards, and local dealers. 
 
-We had two viewings lined up so we got ourseleves a city transit card and a bus to the suberbs. Thefirst car we sawwas great. A 2008Honda Stream with only 51k km onit. Wedecidedsince itdroveandnothing waswrongwithit we would buy it then and thenre. So we walked to the nearbuy malland and went to ever bankin the area.Each bankeither didn't have cash on site or wouldn'tdo withdrawls from forien accounts so we. We thenwent to every ATM maxing outtheire withdrawl limits and thedaily withdraw limits on our debit cars. 
+We had two viewings lined up so we got ourselves a city transit card and a bus to the suburbs. The first car we saw was great. A 2008 Honda Stream with only 51k km on it. We decided since it drove and nothing was clearly wrong with it we would buy it then and there. So we walked to the nearby mall and went to every bank in the area. Each bank either didn't have cash onsite or wouldn't do withdrawals from foreign accounts so we. We then went to every ATM maxing out their withdrawal limits and the daily withdrawal limits on our debit cars. 
 
-It feltcriminal and nefarious likewe werebreaking someruleordoing something weshouldn'tbe doing. Justa fewhundreads dollarsshort of the argeed apon price we decidedto grab lunch. Whilwwaiting forour foodImsgedthe carowner that we needed our backup debit card thatweleft in auckland. They weregracious enough to take what we had at the moment as a deposit. So we hopped in our almost new car and drove back into the city. We thankfullygotenough before maxing out all our cars so we drovebacktopay.
+It felt criminal and nefarious like we were breaking some rule or doing something we shouldn't be doing. Just a few hundred dollars short of the agreed-upon price we decided to grab lunch. While waiting for our food I messaged the car owner that we needed our backup debit card that we left in Auckland. They were gracious enough to take what we had at the moment as a deposit.
 
-After our finalpayment they transferedownership to us (yes its all online) andthen we satdown for some tea and a lovely conversation abouttravel, life,rasing a family,andmore. Excited from our new pruchase andthe lvoely conversation. we went off to a near buy foodmarket for dinner and then watched thesun go down on thenearby beach before heading back to immeditly goto sleep.Asweareboth still jet laggedand exaused fromruniing to allthebanksandATMs.
 
-The next day we took it slow. Got somealone time Katherine heading to a hearby park and Iwentfora urban hikearoundthecity. We planed our the next step in our adventurs and picked up a few oddsandends to make organizing our careasier.
+While we ate A fellow patron at the cafe overheard us chatting about booking a nice restaurant. She struck up a conversation and recommend we try out a site called [First to Table](https://www.firsttable.co.nz/). Where you can book the first or last reservation at a restaurant for cheaper. We thanked her and then ended up talking about our travels with her. We told her our favorite activity was visiting the Serengeti and she mentioned traveling growing up in South Africa and going on Safari there. We ended up chatting about travels and life for quite a while. Until we sadly needed to cut the conversation short as we still had a car to buy. So we walked back to the car, handed the money we had so far and hopped in our almost new car and drove back into the city. Where we thankfully got the remaining money before maxing our last debit card.
+
+After our final payment, they transferred ownership to us (yes it's all online) and then we sat down for some tea and a lovely conversation about travel, life, raisings a family, and more. Again we sadly had to cut the conversation short in order to appease our grumbling stomachs. Excited about our new purchase and the lovely conversation. We went off to a nearby food market for dinner. On the way, we reflected on how nice the folks we are interacting with are. We concluded that if this is representative of New Zealand then we were going to have a wonderful 2 months. After dinner, we walked to a nearby beach and watched the sun lower towards the horizon h before heading back to immediately go to sleep. As we are both still jet lagged and exhausted from running to all the banks and ATMs.
+
+The next day we took it slow. Got some alone time Katherine headed to a nearby park and I went for an urban hike around the city. We planned the next step in our adventure and picked up a few odds and ends to make organizing our car easier.
 
 {% include image-gallery.html folder="/assets/images/2022-10-12-auckland/car" %}
