--- a/_posts/_drafts/2022-10-12-auckland.md
+++ b/_posts/_drafts/2022-10-12-auckland.md
@@ -42,6 +42,7 @@ Having been on the road for so long we are starting to miss the comforts that ma
 We saw [Amsterdam](https://www.imdb.com/title/tt10304142/) and thoroughly enjoyed it. The experience felt refreshing and normal. However, the superlatives and unique new experiences did follow us there. It being the only IMax theater in New Zealand and my first time at the cinema in a foreign country.
 
 ## Museum
+The Auckland Art Museum's permanent gallery has a collection of Maori leadership portraits from the 1800 and 1900s, both men and women. This was accompanied by short descriptions of the person themselves, giving us a great introduction to the history of the country. There was also a sense pride in the individuals shown. It was very cool to see after the guided tour discussing the history. It is something we think about at the historical sites as we continue to travel throughout New Zealand. 
 
 {% include image-gallery.html folder="/assets/images/2022-10-12-auckland/city-museum" %}
 
