--- a/_posts/_drafts/2022-10-12-auckland.md
+++ b/_posts/_drafts/2022-10-12-auckland.md
@@ -39,10 +39,10 @@ Post tour we grabbed lunch at the dumpling place that our guide recommended. Bef
 
 Having been on the road for so long we are starting to miss the comforts that make life feel normal. One way we want to try to bring back a feeling of normalcy was to go to the cinema. After the city tour, we took a break in our airbnb and then headed out to the movies. While in line to buy some popcorn we watch a house sparrow fly from a ceiling rafter into the popped popcorn, pick up a piece and fly back. This happened at least 4 times and brought us so much joy. Mentioning it to the staff and they seemed completely unfazed.
 
-We saw [Amsterdam](https://www.imdb.com/title/tt10304142/) and thoroughly enjoyed it. The experience felt refreshing and normal. However, the superlatives and unique new experiences did follow us there. It being the only IMax theater in New Zealand and my first time at the cinema in a foreign country.
+We saw [Amsterdam](https://www.imdb.com/title/tt10304142/) and thoroughly enjoyed it. The experience felt refreshing and normal. However, the superlatives and unique new experiences did follow us there. It is the only IMax theater in New Zealand and my first time at the cinema in a foreign country.
 
 ## Museum
-The Auckland Art Museum's permanent gallery has a collection of Maori leadership portraits from the 1800 and 1900s, both men and women. This was accompanied by short descriptions of the person themselves, giving us a great introduction to the history of the country. There was also a sense pride in the individuals shown. It was very cool to see after the guided tour discussing the history. It is something we think about at the historical sites as we continue to travel throughout New Zealand. 
+[Auckland Art Gallery Toi o Tāmaki](https://www.aucklandartgallery.com/) was a nice stop on a rainy day. Its permanent gallery has a collection of Maori leadership portraits from the 1800 and 1900s, both men and women. This was accompanied by short descriptions of the person themselves, giving us a great introduction to the history of the country. There was also a sense of pride in the individuals shown. It was very cool to see after the guided tour discussing the history. It is something we think about at the historical sites as we continue to travel throughout New Zealand. We really enjoyed the exhibit with portraits of Maori leaders and found it quite funny seeing a Frida Kahlo exhibit all the way across the world.
 
 {% include image-gallery.html folder="/assets/images/2022-10-12-auckland/city-museum" %}
 
