--- a/_posts/_drafts/2022-10-27-rotorua.md
+++ b/_posts/_drafts/2022-10-27-rotorua.md
@@ -11,7 +11,7 @@ After doing a backpacking trip, arriving at the house on the lake was perfect. W
 
 [lake photos]
 
-Rotorua was also one of our last "chill in place" moments before we had several friends and family join us: Tim's sister and brother-in-law, and a friend of ours from DC. We would be traveling with folks for six weeks of our nine weeks in New Zealand. We are super excited to have our community join us, and wanted to also make sure we had a moment to reconnect before this happened. This was happening in Rotorua, from Thursday to Tuesday. A good, long weekend. 
+Rotorua was also one of our last "relax in a place" moments before we had several friends and family join us: Tim's sister and brother-in-law, and a friend of ours from DC. We would be traveling with folks for six weeks of our nine weeks in New Zealand. We are super excited to have our community join us, and wanted to also make sure we had a moment to reconnect before this happened. This was happening in Rotorua, from Thursday to Tuesday. A good, long weekend. 
 
 ## Friday - Banana Pancakes, Redwoods, Relaxing, and Logistics
 On Friday morning, Tim made us pancakes - specifically banana pancakes! We listened to Jack Johnson's song "Banana Pancakes" and danced around while making breakfast. We set a beautiful breakfast on the porch overlooking the lake. Birds were diving in and out of the lake fishing. And it was just perfect.
@@ -20,11 +20,11 @@ On Friday morning, Tim made us pancakes - specifically banana pancakes! We liste
 
 In listening to the song, I realized that, for us, every day is a Saturday. The song has the lyric "pretend like it's the weekend" and we do that every single day. Additionally, what you do on your weekend depends on what is happening in your life: it is resting and recuperating, adventure, camping, museums, nesting back after travel, etc. Our weeks vary in the same way as our pacing. And on this Friday (aka fake Saturday), we needed to recuperate. Just to do laundry (all 5 loads), relax, watch Netflix, and have a simple day. We ate all our meals at "home", and it felt really good. We had several weeks of logistics and camping gear and other things hanging over our heads, and this felt like the first moment when those had resolved and we could relax. 
 
-For the majority of this trip, I had been handling our "logistics": location research, stay bookings, top activities, thinking about the calendar, etc. Frankly, I am really good at it and can easily research and make decisions about where to generally go, as it is part of what I do at work also. At work, I pick somewhere to start, synthesize huge amounts of information, do some research, and put together the next action steps. Researching "where to go scuba diving in Asia in late October" or "safari in Africa" or "top New Zealand spots" all fall into this quite easily. On the other hand, Tim, as a software engineer, focuses on understanding one problem really well and solving it before moving to the next. This is great for "how to buy a car in New Zealand", "things to consider when doing XX" or "top 4 things to do in a city". What this means for broad strokes of trip planning is that I end up tackling it sooner and faster, meaning I have done more of it. This is quite exhausting, and we'd been talking about shifting this dynamic for a while.
+For the majority of this trip, I had been handling our "logistics": location research, stay bookings, top activities, thinking about the calendar, etc. Frankly, I am really good at it and can easily research and make decisions about where to generally go, as it is part of what I do at work also. At work, I pick somewhere to start, synthesize huge amounts of information, do some research, and put together the next action steps. Researching "where to go scuba diving in Asia in late October", "safari in Africa" or "top New Zealand spots" all fall into this quite easily. On the other hand, Tim, as a software engineer, focuses on understanding one problem really well and solving it before moving to the next. This is great for "how to buy a car in New Zealand", "things to consider when doing XX" or "top 4 things to do in a city". What this means for broad strokes of trip planning is that I end up tackling it sooner and faster, meaning I have done more of it. This is quite exhausting, and we'd been talking about shifting this dynamic for a while.
 
-Leading up to this weekend, Tim made it clear that he wanted to take some of the logistic burden from me for organizing our New Zealand group for the South Island exploration. I had loosely stubbed out the locations where we would go from everyone's interests and a Lonely Planet Highlights book I'd found. He was taking this loose plan and making it real with activities, stays, and exact dates in these different places. 
+Leading up to this weekend, Tim made it clear that he wanted to take some of the logistic burdens from me for organizing our New Zealand group for the South Island exploration. I had loosely stubbed out the locations where we would go from everyone's interests and a Lonely Planet Highlights book I'd found. He was taking this loose plan and making it real with activities, stays, and exact dates in these different places. 
 
-Tim was amazing! He researched places in different towns, and sent out a survey to the group to see what folks were interested in on a 5-star scale. He found amazing houses for us to stay in within our general budget ($50/person/night in USD for New Zealand). He coordinated everyone and figured out things to do when lots of recommended things were closed for COVID. We chatted about possibilities, and sorted this out for an exciting trip with our friends! By Monday afternoon, we had a plan and stays booked for the first couple of weeks with the group!
+Tim was amazing! He researched places in different towns and sent out a survey to the group to see what folks were interested in on a 5-star scale. He found amazing houses for us to stay in within our general budget ($50/person/night in USD for New Zealand). He coordinated everyone and figured out things to do when lots of recommended things were closed for COVID. We chatted about possibilities, and sorted this out for an exciting trip with our friends! By Monday afternoon, we had a plan and stays booked for the first couple of weeks with the group!
 
 He encouraged me to take the day "off." So I did some reading and lots of Netflix watching. On the couch overlooking the lake. It was incredible. 
 
@@ -60,7 +60,7 @@ New Zealand's Maori Arts and Crafts Institute has three main schools that operat
 
 I spoke at length with the director of the Stone and Bone Carving School, Stacy, who reminded me of several printmaking professors I'd had. He shared a fair amount about the school, as well as the evolution and periods of Maori culture since the arrival to New Zealand, or Aotearoa in Maori. He explained that their history is thought about in the metaphor of a seed growing, a plant blooming, and a plant sustaining/surviving. The first period of seed growth was the arrival of seven boats from Polynesia, and adapting to this colder and different environment. Some things needed to immediately change: the clothes worn, food eaten etc. It was bringing culture and metaphor from home and planting roots. The second period was focused on how those customs evolved and adapted to Aotearoa's specific land and have those cultural references reflect that land. This includes the evolution of new iconography based on the reality of living there, new beliefs, etc. The third period started with the arrival of Europeans, with a period of adapting to this larger world and surviving under serious stress and strife. It was about surviving when people were less interested in their culture and felt like it was starting to go extinct. There's been a new resurgence of this cultural interest in the 1970s and 1980s. He shared that some of his more recent students arrive with Maori as their first language, learning it at home before they learn English (and of course being fluent in both). He said this was uncommon for much of his life and he's seen this change recently with students - and he is excited about it.
 
-I asked him about what his ideal future would look like, what he was striving for and what it would encompass. (This is my paraphrased memory of the conversation.) He shared that it would be a symbiotic relationship between Maori and European views, for which he used the metaphor as feminine and masculine or analytical and spiritual. He explained that the Maori views are about getting in touch with the entire context of your environment - physical, spiritual, natural, historical, and future - as one thing. It is about being aware and sensitive to your surrounding in a humbling you-are-part-of-something-larger kind of way. Whereas the European viewpoint is about analysis and sharp intervention, which separates the spiritual from the physical in a lot of ways. Both have strengths and drawbacks, but it is a true balance and combination of the two that matters. We talked about trees and how forestry sees a tree's value. I have been thinking for a long time about the idea of "how do you quantify the intangible to allow people to consider the holistic viewpoint?" He and I chatted about how you measure a tree's attributes or qualities and benefits when it is alive when it is mainly quantified and valued at the price of a dead tree that is used for a particular thing. We discussed how you talk about the benefits to the environment, spiritual health, and the value of the tree's life itself in terms that leverage the benefits of analysis but does not leave a more holistic picture behind. It was an incredible conversation that I was grateful to have with an open and generous stranger.
+I asked him about what his ideal future would look like, what he was striving for and what it would encompass. (This is my paraphrased memory of the conversation.) He shared that it would be a symbiotic relationship between Maori and European views, for which he used the metaphor as feminine and masculine or analytical and spiritual. He explained that the Maori views are about getting in touch with the entire context of your environment - physical, spiritual, natural, historical, and future - as one thing. It is about being aware and sensitive to your surrounding in a humbling you-are-part-of-something-larger kind of way. Whereas the European viewpoint is about analysis and sharp intervention, which separates the spiritual from the physical in a lot of ways. Both have strengths and drawbacks, but it is a true balance and combination of the two that matters. We talked about trees and how forestry sees a tree's value. I have been thinking for a long time about the idea of "how do you quantify the intangible to allow people to consider the holistic viewpoint?" He and I chatted about how you measure a tree's attributes or qualities and benefits when it is alive when it is mainly quantified and valued at the price of a dead tree that is used for a particular thing. We discussed how you talk about the benefits to the environment, spiritual health, and the value of the tree's life itself in terms that leverage the benefits of analysis but do not leave a more holistic picture behind. It was an incredible conversation that I was grateful to have with an open and generous stranger.
 
 Another aspect of the tour included a cultural experience. This is a ceremony around the meeting house and inside it. The meeting house is essentially the heartbeat of a community. As the guide shared, if you are excited or sad or bored or in trouble or have happy news, you go to your meeting house. It is where your community is to support you moving forward, and where you support your community.
 
@@ -123,7 +123,7 @@ Next to it was a kiwi that was about 2 days old, tiny by kiwi standards but larg
 
 In the next room, they keep younger kiwis in small habitats, growing them to a mid-range size before putting them into a larger habitat to fully forage for worms and wander around. In this room we also saw our guide do a health check on a baby kiwi, holding him in a very calm way. He fit into her hand in a similar way that Paka fit into ours more recently at the end of the summer. Snug but fully on the hand. He was not excited to be there, as he had been woken up and you could almost tell he was groggy. We also got to feel separate kiwi feathers, which were very fluffy and soft and light. 
 
-Finally, we were in an enclosure that held three larger kiwis - all inside for the night setting. Two were adult kiwis that they were trying to match into a mating pair. A male and female next to one another and were able to smell and hear one another, but not yet interact. The male was sitting next to the female's enclosure, almost waiting for her. The female was rummaging around for worms and such in the enclosure. They could definitely hear and see us, but had gotten used to it and ignored us. Across from this pair was a juvenile female at about 3 months old, growing to be big enough to either be released or paired. The two females were very active, moving around and hunting for worms or getting food out of another food bowl area the center put out. It was really quite fun to watch them move around. We watched these for about 35 minutes, just sitting on the floor and sharing observations quietly in excitement! It was so much fun. 
+Finally, we were in an enclosure that held three larger kiwis - all inside for the night setting. Two were adult kiwis that they were trying to match into a mating pair. A male and female were next to one another and able to smell and hear one another, but not yet interact. The male was sitting next to the female's enclosure, almost waiting for her. The female was rummaging around for worms and such in the enclosure. They could definitely hear and see us, but had gotten used to it and ignored us. Across from this pair was a juvenile female at about 3 months old, growing to be big enough to either be released or paired. The two females were very active, moving around and hunting for worms or getting food out of another food bowl area the center put out. It was really quite fun to watch them move around. We watched these for about 35 minutes, just sitting on the floor and sharing observations quietly in excitement! It was so much fun. 
 
 Tim and I both learned about kiwis at the Kiwi Hatchery, and I also got some facts from Te Puia. Here are some amazing facts about what we learned, and the overall story of kiwis in New Zealand. 
 
@@ -133,7 +133,7 @@ They are part of the Ratites family, which includes Ostriches, Emu, Rhea and sev
 
 Once humans arrived, starting with Maori and moving forward to Europeans and contemporary immigrants, mammals were imported. This includes rats, cows, sheep, horses and numerous kiwi predators. The predators include the stoat, possums (different from American possums), dogs, and other mammals. This has dramatically reduced the kiwi population, and several kiwi species are basically extinct. Many kiwi conservation centers now help with maintaining the kiwi population.
 
-The National Kiwi Hatchery collects and hatches kiwi eggs, sometimes passing them to other conservation centers to raise them to the 1 kilogram weight. Alternatively, Te Puia Kiwi Conservation Centre raises kiwis hatched elsewhere, gets their weight up to 1 kilogram / 2.5 lbs, and releases them back into the wild area they were originally from. It gives the kiwi a 65% chance of survival in the wilderness to get to full adulthood at 3 years - as opposed to the 5% survival rate when chicks are born in the wild.  
+The National Kiwi Hatchery collects and hatches kiwi eggs, sometimes passing them to other conservation centers to raise them to the 1-kilogram weight. Alternatively, Te Puia Kiwi Conservation Centre raises kiwis hatched elsewhere, gets their weight up to 1 kilogram / 2.5 lbs, and releases them back into the wild area they were originally from. It gives the kiwi a 65% chance of survival in the wilderness to get to full adulthood at 3 years - as opposed to the 5% survival rate when chicks are born in the wild.  
 
 Generally, kiwis live for between 40 - 60 years and mate for life. I like to think of them as a good metaphor for human couples too in that way. The gestation period is 70 - 80 days, the period between when the egg is laid and hatched, which is very long for a bird. The female lays the egg and the male sits on the egg, carefully rotating it every hour or two by 90 degrees. Kiwis are born fully formed - with feathers and all! At one week old, the parents leave and the kiwi has to fend for itself. It is so small that it is at the bottom of the food chain, similar to other baby animals (including turtles and such). However, the predator populations here aren't native and don't have natural limits and have a high reproduction rate. All this translates to a dangerous disadvantage for the kiwi population. 
 
@@ -152,6 +152,6 @@ The place was incredible, seeing all these different colored mud pools bubbling.
 
 [geothermal photos and waterfall photos]
 
-After walking around we did a sulphur and mud bath. First, you get into a sulphur pool with a bucket of mud beside it and put mud on your skin. You sit in the sun and let it dry. As it dries out, it removes the toxins from your pores. Then you wash it off and jump in sulphur pools to relax your muscles. We did that, the first mud bath for us both, and it was so much fun! What a great way to finish our time in Rotorua!
+After walking around we did a sulphur and mud bath. First, you get into a hot spring pool with a bucket of mud beside it and put mud on your skin. You sit in the sun and let it dry. As it dries out, it removes the toxins from your pores. Then you wash it off and jump in sulphur pools to relax your muscles. We did that, the first mud bath for us both, and it was so much fun! What a great way to finish our time in Rotorua!
 
 [mud baths]
