--- a/_posts/_drafts/2022-10-27-rotorua.md
+++ b/_posts/_drafts/2022-10-27-rotorua.md
@@ -68,7 +68,7 @@ There's a ceremony to greet an external tribe, seeing if you are coming in peace
 
 [cultural performance photos] 
 
-A couple of things that stand out to me include:
+A couple of things that stand out to me include the following:
 	• How people say hello and "welcome" is about the landscape and environment as much as it is about the people. You approximately say "welcome, welcome to [nearby mountain's name] land, welcome to [nearby lake's name] land, welcome to [tribe's name] land, welcome to [your name/family name]" - so it is about the environment and spirits of the land as much as it is about humans
 	• There's a lot of ways to create sound and beats, and the Maori use poi and sticks, among other things. Poi are small balls attached to strings that they tap against their bodies and hands in rapid motion to create a beat. 
 	• Carved sticks are used for sound creation, stamina and reflex development, and posture development. They toss these back and forth, use them for training, and use them for sound making. 
