publish hoi an magical/frustrating post

--- a/_posts/2022-09-08-hoian.md
+++ b/_posts/2022-09-08-hoian.md
@@ -3,6 +3,8 @@ layout: post
 title: "Hội An: Magical and Frustrating"
 author:
   - Katherine Nammacher
+flag: 🇻🇳
+thumbnail: /assets/thumbnails/2022-09-08-hoian/lanterns/IMG_4843.jpg
 ---
 
 Hội An is a city of lanterns, dating back thousands of years. Hội An used to be a central meeting port between Vietnam, China, and Japan. People who emigrated from China and Japan brought foldable lanterns with them to remember home. Over time, this evolved to Hội An having their own lantern style, a foldable silk cloth lantern.
