--- a/_wip/2022-09-14-hue.md
+++ b/_wip/2022-09-14-hue.md
@@ -3,6 +3,8 @@ layout: post
 title: "Solo Travel: Hue - An Imperial Palace of Wonder"
 author:
   - Katherine Nammacher
+flag: 🇻🇳
+thumbnail: /assets/thumbnails/2022-09-08-hoian/lanterns/IMG_4843.jpg
 ---
 
 
