--- a/_posts/2022-05-26-rome.md
+++ b/_posts/2022-05-26-rome.md
@@ -16,10 +16,10 @@ The catacombs were Christian burial grounds during the end of the Roman period. 
 
 At the Catacombs of San Sebastián, we were able to see both Christian catacombs and a handful of Roman tombs (which had been rediscovered in the 1920s). The difference was interesting to observe between the ornate, wealthy tombs with stucco ceilings from the Romans, and the carved Greek lettering above the Christian catacomb resting places.
 
-The Colosseum was quite the trip. However, it was a unique day for two reasons
+Getting to the Colosseum was quite the trip. However, it was a unique day for two reasons
 
-- The firefighters were practicing repelling from the top of the outside of the colosseum, training and practicing
 - Crowds of soccer lovers were everywhere, as Italy had just won a European Championship on Wednesday night. They were in a crimson red and singing on key together. Grown men, and hearty sports fans, belting out in song together in the street as a celebration. It was heartwarming to see.
+- The firefighters were practicing repelling from the top of the outside of the colosseum, training and practicing
 
 The Colosseum itself did not disappoint. It was big and grand, despite being stripped for building materials over the centuries. The intricacy and the detail was obvious. Romans were given tickets to the Colosseum, whose events were free. However, you got assigned a seat based on your class. Senators even had their names engraved on their seats. There was an intricate elevator system for people to rise up from the floor. Statue heads shown, discovered in the basement. And the space was just immense. Plenty of great photos for the holiday card also!
 
