hyper link the timeline

--- a/_posts/2022-08-20-siem-reap.md
+++ b/_posts/2022-08-20-siem-reap.md
@@ -4,7 +4,7 @@ title: "Siem Reap"
 author:
   - Timothy Best
 flag: 🇰🇭
-tag: Asia
+tag: siem-reap
 thumbnail: /assets/thumbnails/2022-08-20-siem-reap/apopo/IMG_2736.jpg
 ---
 
