--- a/_posts/2022-09-08-hoian.md
+++ b/_posts/2022-09-08-hoian.md
@@ -4,7 +4,7 @@ title: "Hội An: Magical and Frustrating"
 author:
   - Katherine Nammacher
 flag: 🇻🇳
-tag: Asia
+tag: vietnam
 thumbnail: /assets/thumbnails/2022-09-08-hoian/lanterns/IMG_4843.jpg
 ---
 
