--- a/_posts/2022-09-14-hue.md
+++ b/_posts/2022-09-14-hue.md
@@ -4,7 +4,7 @@ title: "Solo Travel: Hue - An Imperial Palace of Wonder"
 author:
   - Katherine Nammacher
 flag: 🇻🇳
-tag: Asia
+tag: vietnam
 thumbnail: /assets/thumbnails/2022-09-14-Hue/007-SideExitGate/PXL_20220914_105346597.jpg
 ---
 
